--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form>
-NAME<input ype="text">
+  <button>
+<a href="file:///C:/Users/User/OneDrive/Desktop/Abraham/momo.html">COURSE</a>
+</button>
+<button>
+<a href="file:///C:/Users/User/OneDrive/Desktop/Ibrohim%20-%20Copy/Aboltus.html">REGISTRSTION</a>
+</button>
+<button>
+<a href="file:///C:/Users/User/OneDrive/Desktop/Ibrohim%20-%20Copy/Boy.html">LESSONS</a>
+</button>
+<button>
+<a href="mailto:hadhamjononov31@gmail.com">SEND G-mail</a>
+</button
+  <form>Data<input type="text" name="Data"/>
+</br></br>
+  First name<input type="text" name="First name"/>
+</br></br>
+  Birth<input type="text" name="Birth"/>
+<h1>GENDER</h1>
+   <input type="radio">
+<label>MALE</label>
+    <input type="radio">
+<label> FEMALE</label>
+< /br>
+  <i> NAME<input ype="text"</i>
 </br>
-DATE OF BIRTH<input type="text">
+  <i> DATE OF BIRTH<input type="text"</i>
 </br>
-PHONE NUMBER<input type="number">
+  <i.PHONE NUMBER<input type="number"</i>
 </br>
-E-mail <input type="email">
+  <i>E-mail <input type="email"</i>
 </form>
 </body>
 </html>
