--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 </button>
 <button>
 <a href="mailto:hadhamjononov31@gmail.com">SEND G-mail</a>
-</button
-  <form>Data<input type="text" name="Data"/>
-</br></br>
-  First name<input type="text" name="First name"/>
-</br></br>
-  Birth<input type="text" name="Birth"/>
+  </button>
+  
 <h1>GENDER</h1>
    <input type="radio">
 <label>MALE</label>
